syntax = "proto3";
package broadcast;

message ForumPost {
  string title = 1;
  string url = 2;
  string message = 3;
}

message BroadcastEntry {
  string kind = 1;
  map<string, string> headers = 2;
  bytes payload = 3;
}

message BroadcastMessage {
  string topic = 1;
  int64 timestamp = 2;
  repeated BroadcastEntry entries = 3;
  bytes parent_digest = 4;
}
