syntax = "proto3";
package wrapper;

message AuthWrapper {
  // Serialized version of the public key.
  bytes pub_key = 1;
  // Signature is the signature of the metadata by public key.
  bytes signature = 2;
  // Signature scheme provided.  Default is Schnorr, but can be ecdsa.
  enum SignatureScheme {
    SCHNORR = 0;
    ECDSA = 1;
  }
  SignatureScheme scheme = 3;
  // The serialized payload covered by the signature.
  bytes serialized_payload = 4;
}
